--- a/adoption/employee.html
+++ b/adoption/employee.html
@@ -46,7 +46,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <a class="index-text"  href="../inquiry.html">お問い合わせ</a>
+                            <a class="index-text"  href="https://rewrite-hd.com/page3.html">お問い合わせ</a>
                         </li>
                     </ul>
                 </div>
@@ -221,7 +221,7 @@
             <div class="l-section">
               <ul class="m-bnrList m-bnrList--flex">
         <li class="m-bnrList__item m-bnrList__item--sizeS">
-          <a class="m-circleBtn-element" href="/recruit/career/">
+          <a class="m-circleBtn-element" href="../adoption/executive.html">
             <div class="m-bnrList__img">
               <picture>
                 <source media="(max-width:750px)" srcset="https://placehold.jp/187x139.png">
@@ -236,7 +236,7 @@
           </a>
         </li>
         <li class="m-bnrList__item m-bnrList__item--sizeS">
-          <a class="m-circleBtn-element" href="/recruit/graduates/">
+          <a class="m-circleBtn-element" href="../adoption/employee.html">
             <div class="m-bnrList__img">
               <picture>
                 <source media="(max-width:750px)" srcset="https://placehold.jp/187x139.png">
@@ -251,7 +251,7 @@
           </a>
         </li>
         <li class="m-bnrList__item m-bnrList__item--sizeS">
-          <a class="m-circleBtn-element" href="/recruit/arbeit/">
+          <a class="m-circleBtn-element" href="../adoption/part.html">
             <div class="m-bnrList__img">
               <picture>
                 <source media="(max-width:750px)" srcset="https://placehold.jp/187x139.png">
