--- a/company.html
+++ b/company.html
@@ -45,7 +45,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <a class="index-text"  href="inquiry.html">お問い合わせ</a>
+                            <a class="index-text"  href="https://rewrite-hd.com/page3.html">お問い合わせ</a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +108,7 @@
             <div class="l-block l-block--bg">
               <div class="l-contents">
                 <div class="l-section">
-                  <ul class="m-bnrList m-bnrList--flex">
+                  <ul class="m-bnrList m-bnrList--flex m-bnrList-company">
                     <li class="m-bnrList__item m-bnrList__item--sizeL">
                       <a class="m-circleBtn-element" href="company/mission.html">
                         <div class="m-bnrList__img">
