--- a/company/message.html
+++ b/company/message.html
@@ -45,7 +45,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <a class="index-text"  href="../inquiry.html">お問い合わせ</a>
+                            <a class="index-text"  href="https://rewrite-hd.com/page3.html">お問い合わせ</a>
                         </li>
                     </ul>
                 </div>
@@ -58,7 +58,7 @@
         <div class="m-kv m-kv--message">
           <div class="m-kv__inner">
             <h1 class="m-kv__ttl">
-              <span class="m-kv__ttl--ja">社長メッセージ</span>
+              <span class="m-kv__ttl--ja">グループCEOメッセージ</span>
               <span class="m-kv__ttl--en">Top Message</span>
             </h1>
           </div>
@@ -87,8 +87,8 @@
               <div class="l-section">
                 <div class="m-lead">
                   <p class="m-lead__txt m-lead__txt--sizeL">
-                    テキストテキスト<br>
-                    テキストテキスト<br class="u-spi">テキストテキストテキストテキスト
+                    我が信条<br>
+                    <!-- テキストテキスト<br class="u-spi">テキストテキストテキストテキスト -->
                   </p>
                 </div>
               </div>
@@ -116,7 +116,13 @@
                 <div class="l-sectionLv2">
                   <p class="m-txt u-tar">株式会社リライト・<br class="u-spi">ホールディングス</p>
                   <p class="m-txt u-tar">
-                    代表取締役社長　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="広永 勝太">
+                    取締役社長　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="広永 勝太">
+                  </p>
+                  <p class="m-txt u-tar">
+                    取締役副社長　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="西村 佳晃">
+                  </p>
+                  <p class="m-txt u-tar">
+                    代表取締役　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="" alt="大森 健一">
                   </p>
                 </div>
               </div>
