--- a/company/summary.html
+++ b/company/summary.html
@@ -46,7 +46,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <a class="index-text"  href="../inquiry.html">お問い合わせ</a>
+                            <a class="index-text"  href="https://rewrite-hd.com/page3.html">お問い合わせ</a>
                         </li>
                     </ul>
                 </div>
@@ -167,7 +167,29 @@
             <p class="p-profile__listTxt">社員4,205名　臨時従業員26,181名（2024年2月末日現在）</p>
           </li> -->
         </ul>
-      
+        <div class="l-block l-block--bg">
+            <div class="l-contents">
+              <div class="l-section">
+                <ul class="m-bnrList m-bnrList--flex">
+                  <li class="m-bnrList__item m-bnrList__item--sizeL">
+                    <a class="m-circleBtn-element" href="../business/group.html">
+                      <div class="m-bnrList__img">
+                        <picture>
+                          <source media="(max-width:750px)" srcset="https://placehold.jp/286x103.png">
+                          <img loading="lazy" decoding="async" src="https://placehold.jp/566x200.png" alt="グループ会社紹介">
+                        </picture>
+                      </div>
+                      <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeL">
+                        <span class="ja">グループ会社紹介</span>
+                        <span class="en">Our Group</span>
+                      </h2>
+                      <div class="m-circleBtn large arrow-white"><span></span></div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
       </main>
     <footer>
         <div class="footer">
