--- a/business.html
+++ b/business.html
@@ -46,7 +46,7 @@
                         </ul>
                         <ul>
                             <li>
-                                <a class="index-text"  href="inquiry.html">お問い合わせ</a>
+                                <a class="index-text"  href="https://rewrite-hd.com/page3.html">お問い合わせ</a>
                             </li>
                         </ul>
                     </div>
